--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
             - POSTGRES_PASSWORD=test-databases
         ports:
             - 15432:5432
-    movies-api:
+    movie-api:
       build:
           context: ./movies/api
           dockerfile: ./Dockerfile.dev
@@ -24,7 +24,7 @@ services:
       environment:
           DATABASE_URL: postgresql://user-name:password@postgres/db-name
           WAIT_HOSTS: postgres:5432
-    accounts-api:
+    account-api:
       build:
           context: ./accounts/api
           dockerfile: ./Dockerfile.dev
