--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ volumes:
     yovies-data:
         external: true
 services:
-    postgres:
+    database:
         build:
             context: ./relational-data
             dockerfile: ./Dockerfile.dev
@@ -21,6 +21,8 @@ services:
           - "8100:8000"
       volumes:
           - ./movies/api:/app
+      depends_on:
+          - database
       environment:
           DATABASE_URL: postgresql://user-name:password@postgres/db-name
           WAIT_HOSTS: postgres:5432
