Created Review Project and app with Nikansha

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ volumes:
     yovies-data:
         external: true
 services:
-    postgres:
+    database:
         build:
             context: ./relational-data
             dockerfile: ./Dockerfile.dev
@@ -21,6 +21,20 @@ services:
           - "8100:8000"
       volumes:
           - ./movies/api:/app
+      environment:
+          DATABASE_URL: postgresql://user-name:password@postgres/db-name
+          WAIT_HOSTS: postgres:5432
+
+    reviews-api:
+      build:
+          context: ./reviews/api
+          dockerfile: ./Dockerfile.dev
+      ports:
+          - "8090:8000"
+      volumes:
+          - ./reviews/api:/app
+      depends_on:
+          - database
       environment:
           DATABASE_URL: postgresql://user-name:password@postgres/db-name
           WAIT_HOSTS: postgres:5432
