--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
             - database
         environment:
             DATABASE_URL: postgresql://user-name:password@postgres/db-name
-            WAIT_HOSTS: postgres:5432
+            WAIT_HOSTS: database:5432
     account-api:
         build:
             context: ./accounts/api
@@ -50,7 +50,7 @@ services:
             - database
         environment:
             DATABASE_URL: postgresql://user-name:password@postgres/db-name
-            WAIT_HOSTS: postgres:5432
+            WAIT_HOSTS: database:5432
     reviews-api:
         build:
             context: ./reviews/api
@@ -63,4 +63,4 @@ services:
             - database
         environment:
             DATABASE_URL: postgresql://user-name:password@postgres/db-name
-            WAIT_HOSTS: postgres:5432
+            WAIT_HOSTS: database:5432
