--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,7 @@ sqlparse==0.4.2
 tomli==2.0.1
 urllib3==1.26.9
 whitenoise==5.3.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.5
+uvicorn[standard]==0.17.6
