--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
         environment:
             DATABASE_URL: postgresql://user-name:password@postgres/db-name
             WAIT_HOSTS: database:5432
-            DJWTO_SIGNING_KEY: abcdefg
+            DJWTO_SIGNING_KEY: ${DJWTO_SIGNING_KEY}
     reviews-api:
         build:
             context: ./reviews/api
