--- a/accounts/api/requirements.txt
+++ b/accounts/api/requirements.txt
@@ -6,7 +6,7 @@ click==8.1.2
 dj-database-url==0.5.0
 django-cors-headers==3.11.0
 Django==4.0.3
-djwto==0.0.3
+djwto @ git+https://github.com/hr-curtissimo/djwto.git
 flake8==4.0.1
 idna==3.3
 mccabe==0.6.1
