--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,21 @@ variables:
 #   stage: test
 #   script:
 #     - pip install flake8
-#     - flake8 accounts/api reviews/api
+#     - flake8 accounts reviews
+
+build-front-end-job:
+    stage: build
+    image: node:lts-bullseye
+    variables:
+        PUBLIC_URL: https://yoovies.gitlab.io/yelp-for-movies # SEE BELOW HOW TO SET THIS
+    script:
+        - cd ghi  # CHANGE THIS TO THE DIRECTORY THAT HAS package.json
+        - npm install
+        - npm run build
+        - cp build/index.html build/404.html  # Make this a SPA
+    artifacts:
+        paths:
+        - ghi/build/  # Save all of the files in the build path
 
 build-acounts-api-image-job:  # RENAME THIS
   rules:
@@ -58,6 +72,44 @@ build-acounts-api-image-job:  # RENAME THIS
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - docker push ${CI_REGISTRY_IMAGE}/accounts_api:$CI_JOB_ID
     - docker push ${CI_REGISTRY_IMAGE}/accounts_api:latest
+
+build-reviews-api-image-job:  # RENAME THIS
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  stage: build
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  script:
+    # CHANGE THIS TO THE DIRECTORY THAT HAS YOUR Dockerfile
+    - cd reviews/api
+
+    # EVERYWHERE IT SHOWS fastapi_api BELOW, CHANGE THOSE
+    # TO A MORE MEANINGFUL SERVICE NAME (5 PLACES)
+    - docker build -t ${CI_REGISTRY_IMAGE}/reviews_api:latest .
+    - docker tag ${CI_REGISTRY_IMAGE}/reviews_api:latest ${CI_REGISTRY_IMAGE}/reviews_api:$CI_JOB_ID
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+    - docker push ${CI_REGISTRY_IMAGE}/reviews_api:$CI_JOB_ID
+    - docker push ${CI_REGISTRY_IMAGE}/reviews_api:latest
+
+build-reviews-poller-image-job:  # RENAME THIS
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  stage: build
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  script:
+    # CHANGE THIS TO THE DIRECTORY THAT HAS YOUR Dockerfile
+    - cd reviews/poll
+
+    # EVERYWHERE IT SHOWS fastapi_api BELOW, CHANGE THOSE
+    # TO A MORE MEANINGFUL SERVICE NAME (5 PLACES)
+    - docker build -t ${CI_REGISTRY_IMAGE}/reviews_poller:latest .
+    - docker tag ${CI_REGISTRY_IMAGE}/reviews_poller:latest ${CI_REGISTRY_IMAGE}/reviews_poller:$CI_JOB_ID
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+    - docker push ${CI_REGISTRY_IMAGE}/reviews_poller:$CI_JOB_ID
+    - docker push ${CI_REGISTRY_IMAGE}/reviews_poller:latest
 
 deploy-accounts-api-image-job:  # RENAME THIS
   rules:
@@ -86,45 +138,6 @@ deploy-accounts-api-image-job:  # RENAME THIS
     - docker tag ${CI_REGISTRY_IMAGE}/accounts_api:latest registry.heroku.com/$HEROKU_ACCOUNTS_API_APP/web:latest
     - docker push registry.heroku.com/$HEROKU_ACCOUNTS_API_APP/web:latest
 
-release-accounts-api-image-job:  # RENAME THIS
-  stage: deploy
-  image: node:10.17-alpine
-  needs:
-    # CHANGE THIS TO THE JOB NAME FROM THE LAST STEP
-    - deploy-accounts-api-image-job
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  before_script:
-    - apk add curl bash
-    - curl https://cli-assets.heroku.com/install.sh | sh
-  script:
-    # EVERYWHERE IT SHOWS HEROKU_SERVICE_APP BELOW, CHANGE
-    # THOSE TO THE VARIABLE NAME YOU CREATED FOR THE CI/CD
-    # SETTINGS (1 PLACE)
-
-    # IF THIS IS FOR A BACKGROUND SERVICE LIKE A POLLER,
-    # CHANGE web TO worker (1 PLACE)
-    - heroku container:release web --app $HEROKU_ACCOUNTS_API_APP
-
-build-reviews-api-image-job:  # RENAME THIS
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  stage: build
-  image: docker:20.10.16
-  services:
-    - docker:20.10.16-dind
-  script:
-    # CHANGE THIS TO THE DIRECTORY THAT HAS YOUR Dockerfile
-    - cd reviews/api
-
-    # EVERYWHERE IT SHOWS fastapi_api BELOW, CHANGE THOSE
-    # TO A MORE MEANINGFUL SERVICE NAME (5 PLACES)
-    - docker build -t ${CI_REGISTRY_IMAGE}/reviews_api:latest .
-    - docker tag ${CI_REGISTRY_IMAGE}/reviews_api:latest ${CI_REGISTRY_IMAGE}/reviews_api:$CI_JOB_ID
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
-    - docker push ${CI_REGISTRY_IMAGE}/reviews_api:$CI_JOB_ID
-    - docker push ${CI_REGISTRY_IMAGE}/reviews_api:latest
-
 deploy-reviews-api-image-job:  # RENAME THIS
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
@@ -151,45 +164,6 @@ deploy-reviews-api-image-job:  # RENAME THIS
     - docker pull ${CI_REGISTRY_IMAGE}/reviews_api:latest
     - docker tag ${CI_REGISTRY_IMAGE}/reviews_api:latest registry.heroku.com/$HEROKU_REVIEWS_API_APP/web:latest
     - docker push registry.heroku.com/$HEROKU_REVIEWS_API_APP/web:latest
-
-release-reviews-api-image-job:  # RENAME THIS
-  stage: deploy
-  image: node:10.17-alpine
-  needs:
-    # CHANGE THIS TO THE JOB NAME FROM THE LAST STEP
-    - deploy-reviews-api-image-job
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  before_script:
-    - apk add curl bash
-    - curl https://cli-assets.heroku.com/install.sh | sh
-  script:
-    # EVERYWHERE IT SHOWS HEROKU_SERVICE_APP BELOW, CHANGE
-    # THOSE TO THE VARIABLE NAME YOU CREATED FOR THE CI/CD
-    # SETTINGS (1 PLACE)
-
-    # IF THIS IS FOR A BACKGROUND SERVICE LIKE A POLLER,
-    # CHANGE web TO worker (1 PLACE)
-    - heroku container:release web --app $HEROKU_REVIEWS_API_APP
-
-build-reviews-poller-image-job:  # RENAME THIS
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  stage: build
-  image: docker:20.10.16
-  services:
-    - docker:20.10.16-dind
-  script:
-    # CHANGE THIS TO THE DIRECTORY THAT HAS YOUR Dockerfile
-    - cd reviews/poll
-
-    # EVERYWHERE IT SHOWS fastapi_api BELOW, CHANGE THOSE
-    # TO A MORE MEANINGFUL SERVICE NAME (5 PLACES)
-    - docker build -t ${CI_REGISTRY_IMAGE}/reviews_poller:latest .
-    - docker tag ${CI_REGISTRY_IMAGE}/reviews_poller:latest ${CI_REGISTRY_IMAGE}/reviews_poller:$CI_JOB_ID
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
-    - docker push ${CI_REGISTRY_IMAGE}/reviews_poller:$CI_JOB_ID
-    - docker push ${CI_REGISTRY_IMAGE}/reviews_poller:latest
 
 deploy-reviews-poller-image-job:  # RENAME THIS
   rules:
@@ -218,6 +192,46 @@ deploy-reviews-poller-image-job:  # RENAME THIS
     - docker tag ${CI_REGISTRY_IMAGE}/reviews_api:latest registry.heroku.com/$HEROKU_REVIEWS_POLLER_APP/worker:latest
     - docker push registry.heroku.com/$HEROKU_REVIEWS_POLLER_APP/worker:latest
 
+release-accounts-api-image-job:  # RENAME THIS
+  stage: deploy
+  image: node:10.17-alpine
+  needs:
+    # CHANGE THIS TO THE JOB NAME FROM THE LAST STEP
+    - deploy-accounts-api-image-job
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  before_script:
+    - apk add curl bash
+    - curl https://cli-assets.heroku.com/install.sh | sh
+  script:
+    # EVERYWHERE IT SHOWS HEROKU_SERVICE_APP BELOW, CHANGE
+    # THOSE TO THE VARIABLE NAME YOU CREATED FOR THE CI/CD
+    # SETTINGS (1 PLACE)
+
+    # IF THIS IS FOR A BACKGROUND SERVICE LIKE A POLLER,
+    # CHANGE web TO worker (1 PLACE)
+    - heroku container:release web --app $HEROKU_ACCOUNTS_API_APP
+
+release-reviews-api-image-job:  # RENAME THIS
+  stage: deploy
+  image: node:10.17-alpine
+  needs:
+    # CHANGE THIS TO THE JOB NAME FROM THE LAST STEP
+    - deploy-reviews-api-image-job
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  before_script:
+    - apk add curl bash
+    - curl https://cli-assets.heroku.com/install.sh | sh
+  script:
+    # EVERYWHERE IT SHOWS HEROKU_SERVICE_APP BELOW, CHANGE
+    # THOSE TO THE VARIABLE NAME YOU CREATED FOR THE CI/CD
+    # SETTINGS (1 PLACE)
+
+    # IF THIS IS FOR A BACKGROUND SERVICE LIKE A POLLER,
+    # CHANGE web TO worker (1 PLACE)
+    - heroku container:release web --app $HEROKU_REVIEWS_API_APP
+
 release-reviews-poller-image-job:  # RENAME THIS
   stage: deploy
   image: node:10.17-alpine
@@ -237,20 +251,6 @@ release-reviews-poller-image-job:  # RENAME THIS
     # IF THIS IS FOR A BACKGROUND SERVICE LIKE A POLLER,
     # CHANGE web TO worker (1 PLACE)
     - heroku container:release worker --app $HEROKU_REVIEWS_POLLER_APP
-
-build-front-end-job:
-    stage: build
-    image: node:lts-bullseye
-    variables:
-        PUBLIC_URL: https://yoovies.gitlab.io/yelp-for-movies # SEE BELOW HOW TO SET THIS
-    script:
-        - cd ghi  # CHANGE THIS TO THE DIRECTORY THAT HAS package.json
-        - npm install
-        - npm run build
-        - cp build/index.html build/404.html  # Make this a SPA
-    artifacts:
-        paths:
-        - ghi/build/  # Save all of the files in the build path
 
 pages:  # THIS STEP MUST BE NAME PAGES
     stage: deploy
