--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@ build-reviews-poller-image-job:  # RENAME THIS
 
     # EVERYWHERE IT SHOWS fastapi_api BELOW, CHANGE THOSE
     # TO A MORE MEANINGFUL SERVICE NAME (5 PLACES)
-    - docker build -t ${CI_REGISTRY_IMAGE}/reviews_poller:latest .
+    - docker build -t ${CI_REGISTRY_IMAGE}/reviews_poller:latest -f Dockerfile.poller .
     - docker tag ${CI_REGISTRY_IMAGE}/reviews_poller:latest ${CI_REGISTRY_IMAGE}/reviews_poller:$CI_JOB_ID
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - docker push ${CI_REGISTRY_IMAGE}/reviews_poller:$CI_JOB_ID
