--- a/reviews/api/requirements.txt
+++ b/reviews/api/requirements.txt
@@ -8,7 +8,7 @@ django-cors-headers==3.11.0
 Django==4.0.3
 djwto @ git+https://github.com/hr-curtissimo/djwto.git
 flake8==4.0.1
-gunicorn==20.1.0
+# gunicorn==20.1.0
 idna==3.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
@@ -22,3 +22,4 @@ sqlparse==0.4.2
 tomli==2.0.1
 urllib3==1.26.9
 whitenoise==5.3.0
+uvicorn[standard]==0.17.6
