--- a/reviews/api/Dockerfile
+++ b/reviews/api/Dockerfile
@@ -14,4 +14,4 @@ COPY reviews_rest reviews_rest
 COPY common common
 
 RUN pip install -r requirements.txt
-CMD python manage.py migrate && uvicorn accounts_project.wsgi --bind 0.0.0.0:$PORT --log-file -
+CMD python manage.py migrate && uvicorn accounts_project.wsgi --host 0.0.0.0 --port 8000
