--- a/reviews/api/Dockerfile
+++ b/reviews/api/Dockerfile
@@ -14,4 +14,4 @@ COPY reviews_rest reviews_rest
 COPY common common
 
 RUN pip install -r requirements.txt
-CMD python manage.py migrate && gunicorn reviews_project.asgi:reviews_rest -k uvicorn.workers.UvicornWorker --host 0.0.0.0 --port 8000
+CMD python manage.py migrate && gunicorn reviews_project.asgi:reviews_rest -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:443 --log-file -
