--- a/reviews/api/Dockerfile.dev
+++ b/reviews/api/Dockerfile.dev
@@ -5,4 +5,5 @@ ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait
 RUN chmod +x /wait
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-CMD /wait && python manage.py makemigrations && python manage.py migrate && python manage.py runserver "0.0.0.0:8000"
+RUN apt update && apt install -y cron
+CMD /wait && python manage.py makemigrations && python manage.py migrate && python manage.py crontab add && python manage.py runserver "0.0.0.0:8000"
