--- a/reviews/api/requirements.txt
+++ b/reviews/api/requirements.txt
@@ -10,6 +10,7 @@ djwto @ git+https://github.com/hr-curtissimo/djwto.git
 flake8==4.0.1
 gunicorn==20.1.0
 idna==3.3
+django-crontab==0.7.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
