--- a/reviews/api/Dockerfile.dev
+++ b/reviews/api/Dockerfile.dev
@@ -6,4 +6,4 @@ RUN chmod +x /wait
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 RUN apt update && apt install -y cron
-CMD /wait && python manage.py makemigrations && python manage.py migrate && python manage.py crontab add && python manage.py runserver "0.0.0.0:8000"
+CMD /wait && python manage.py makemigrations && python manage.py migrate && python manage.py runserver "0.0.0.0:8000"
